# nonebot-plugin-dancecube

./: LICENSE  README.md  pyproject.toml
nonebot_plugin_dancecube/: __init__.py  config.py  download.py  official_cache.py  pic.py  recording.py  tokens.py  userinfo.py  utils.py
nonebot_plugin_dancecube/templates/: _base.html  ap30.html  myrt.html  song.html
